--- a/style.css
+++ b/style.css
@@ -1,10 +1,18 @@
 /* The @import rule below imports the Playfair Display and Source Sans Pro fonts into the stylesheet. You don't have to edit this line.*/
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display&family=Source+Sans+Pro:wght@400&display=swap");
+a:link { color: #d62828; } 
+a:hover { color: #f77f00; }
 
 body {
   color: #003049;
+  background-color: #eae2b7;
   font-family: "Source Sans Pro", Tahoma, Geneva, Verdana, sans-serif;
   padding: 40px;
+}
+
+header {
+  font-family: "Playfair Display", Times, serif;
+  text-align: center;
 }
 
 /* Set the font family for any h1, h2, or h3 heading */
@@ -12,6 +20,14 @@ h1,
 h2,
 h3 {
   font-family: "Playfair Display", Times, serif;
+  text-align:center;
+}
+
+h2 {
+  font-size: 24px;
+}
+h3 {
+  font-size: 18px;
 }
 
 article {
@@ -37,13 +53,21 @@ img {
   width: 100%;
   max-width: 200px;
   height: auto;
+  display: block;
+  margin: 0 auto;
 }
 
 hr {
   border: 1px solid black;
 }
 
-/* Add your solution below */
+
+footer {
+  font-size: 18px;
+  text-align: center;
+}
 
 .image-circle {
+  border-radius: 100px;
+  border: 2px solid #003049;
 }
