--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ hr {
 }
 
 
-footer {
+header, footer {
   font-size: 18px;
   text-align: center;
 }
@@ -70,4 +70,8 @@ footer {
 .image-circle {
   border-radius: 100px;
   border: 2px solid #003049;
+}
+#about, #contact {
+  text-align: center;
+  margin: 0 auto;
 }
